<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- Title Bar -->
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/navBar"
            android:textColorSecondary="@color/titleText"
            android:theme="@style/OverflowTheme"
            android:id="@+id/title_bar">

            <!-- Actual text container for title -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TitleTheme"
                android:text="@string/homeLbl" />
        </android.support.v7.widget.Toolbar>

        <!-- Main Menu -->
        <include
            layout = "@layout/nav_bar">
        </include>
    </LinearLayout>

    <!-- Total Hours -->
    <TextView
        android:id="@+id/totalHoursLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="135dp"
        android:text="@string/totalHoursLbl"
        style="@style/InputTitle"/>

    <TextView
        android:id="@+id/totalHourEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/totalHoursLbl"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="175dp"
        android:text="TextView" />

    <!-- Total Jobs -->
    <TextView
        android:id="@+id/totalJobsLbl"
        style="@style/InputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="165dp"
        android:text="@string/totalJobsLbl" />

    <TextView
        android:id="@+id/totalJobEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/totalJobsLbl"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="175dp"
        android:text="TextView" />

    <!-- Week Hours -->

    <!-- Most Recent Entry -->
    <TextView
        android:id="@+id/mostRecentEntryLbl"
        style="@style/InputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="195dp"
        android:text="@string/mostRecentEntryLbl" />

    <!-- Used as base for "Most Recent" alignments -->
    <TextView
        android:id="@+id/recentHoursLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="225dp"
        android:text="@string/recentHours" />

    <TextView
        android:id="@+id/recentDateLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/recentHoursLbl"
        android:layout_marginTop="265dp"
        android:text="@string/dateLbl" />

    <TextView
        android:id="@+id/recentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="265dp"
        android:layout_marginLeft="130dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/recentHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/recentHoursLbl"
        android:layout_marginLeft="130dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/recentJobNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recentDateLbl"
        android:layout_marginTop="305dp"
        android:text="@string/jobNameLbl" />

    <TextView
        android:id="@+id/recentJobName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recentDate"
        android:layout_alignTop="@id/recentJobNameLbl"
        android:text="TextView" />

</RelativeLayout>