<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHours">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- Title Bar -->
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/navBar"
            android:textColorSecondary="@color/titleText"
            android:theme="@style/OverflowTheme"
            android:id="@+id/title_bar">

            <!-- Actual text container for title -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TitleTheme"
                android:text="@string/hoursLbl" />
        </android.support.v7.widget.Toolbar>

        <!-- Main Menu -->
        <include
            layout = "@layout/nav_bar">
        </include>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="4dp">

                <!-- Date Title -->
                <TextView
                    android:id="@+id/dateLbl"
                    style="@style/InputTitle"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/dateLbl" />

                <!-- Start Time Title -->
                <TextView
                    android:id="@+id/startTimeLbl"
                    style="@style/InputTitle"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/startTimeLbl" />

                <!-- End Time Title -->
                <TextView
                    android:id="@+id/endTimeLbl"
                    style="@style/InputTitle"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/endTimeLbl" />

                <!-- Lunch Title -->
                <TextView
                    android:id="@+id/lunchLbl"
                    style="@style/InputTitle"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="@string/lunchLbl" />

                <!-- Job Name Title -->
                <TextView
                    android:id="@+id/jobNameLbl"
                    style="@style/InputTitle"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:text="@string/jobNameLbl" />

                <!-- Date Input -->
                <EditText
                    android:id="@+id/hoursDate"
                    style="@style/InputBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:inputType="date" />

                <!-- Start Time Input -->
                <EditText
                    android:id="@+id/startTime"
                    style="@style/InputBoxStyle"
                    android:layout_width="@dimen/timeInputWidth"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:inputType="time" />

                <!-- Start Time AM/PM Select -->
                <Spinner
                    android:id="@+id/startTimeAMPM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2" />

                <!-- End Time Input -->
                <EditText
                    android:id="@+id/endTime"
                    style="@style/InputBoxStyle"
                    android:layout_width="@dimen/timeInputWidth"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:inputType="time" />

                <!-- End Time AM/PM Select -->
                <Spinner
                    android:id="@+id/endTimeAMPM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="2" />

                <!-- Lunch Duration Input -->
                <EditText
                    android:id="@+id/lunchDuration"
                    style="@style/InputBoxStyle"
                    android:layout_width="@dimen/lunchDurationWidth"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:inputType="number"
                    android:text="@string/defaultLunchDuration" />

                <!-- Lunch Duration Type Select -->
                <Spinner
                    android:id="@+id/lunchDurationType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="2" />

                <!-- Job Select -->
                <Spinner
                    android:id="@+id/jobList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="1" />

                <!-- Save Button -->
                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/saveBtnLbl" />

            </GridLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>