<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageJobs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- Title Bar -->
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/navBar"
            android:textColorSecondary="@color/titleText"
            android:theme="@style/OverflowTheme"
            android:id="@+id/title_bar">

            <!-- Actual text container for title -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TitleTheme"
                android:text="@string/manageJobLbl" />
        </android.support.v7.widget.Toolbar>

        <!-- Main Menu -->
        <include
            layout = "@layout/nav_bar">
        </include>

    </LinearLayout>

    <TextView
        android:id="@+id/selectJobLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="20dp"
        android:text="@string/selectJob"
        style="@style/InputTitle"/>

    <Spinner
        android:id="@+id/jobsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/selectJobLbl"
        android:layout_marginLeft="110dp"/>

    <TextView
        android:id="@+id/jobNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectJobLbl"
        android:layout_marginTop="200dp"
        android:text="@string/jobNameLbl"
        style="@style/InputTitle"/>

    <Switch
        android:id="@+id/jobActiveSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectJobLbl"
        android:layout_marginTop="240dp"
        android:switchPadding="10dp"
        android:text="@string/activeSwitchLbl"
        android:textOff="no"
        android:textOn="yes"
        style="@style/InputTitle"/>

    <Button
        android:id="@+id/saveEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="285dp"

        android:text="SAVE" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/saveEditBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/cancelBtnLbl" />

    <EditText
        android:id="@+id/jobList"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/jobsList"
        android:layout_alignTop="@+id/jobNameLbl"
        android:layout_marginTop="-10dp"
        style="@style/InputBoxStyle"/>

    <TextView
        android:id="@+id/jobID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@+id/deleteJobBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="158dp"
        android:text="Delete Job" />
</RelativeLayout>