<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJob">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- Title Bar -->
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/navBar"
            android:textColorSecondary="@color/titleText"
            android:theme="@style/OverflowTheme"
            android:id="@+id/title_bar">

            <!-- Actual text container for title -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TitleTheme"
                android:text="@string/addJobLbl" />
        </android.support.v7.widget.Toolbar>

        <!-- Main Menu -->
        <include
            layout = "@layout/nav_bar">
        </include>

    </LinearLayout>

    <TextView
        android:id="@+id/jobNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="160dp"
        android:text="@string/jobNameLbl" />

    <EditText
        android:id="@+id/jobList"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginLeft="80dp"
        android:layout_alignLeft="@+id/jobNameLbl"
        style="@style/InputBoxStyle"/>

    <Button
        android:id="@+id/saveJobBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:text="@string/saveBtnLbl" />

</RelativeLayout>