<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- Title Bar -->
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/navBar"
            android:textColorSecondary="@color/titleText"
            android:theme="@style/OverflowTheme"
            android:id="@+id/title_bar">

            <!-- Actual text container for title -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TitleTheme"
                android:text="@string/manageHoursLbl" />
        </android.support.v7.widget.Toolbar>

        <!-- Main Menu -->
        <include
            layout = "@layout/nav_bar">
        </include>


    </LinearLayout>

        <TextView
            android:id="@+id/jobLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="140dp"
            android:text="@string/jobLbl"
            style="@style/InputTitle"/>

        <Spinner
            android:id="@+id/jobList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_alignTop="@+id/jobLbl"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp" />

        <Switch
            android:id="@+id/limitDatesSwitch"
            style="@style/InputTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignTop="@id/jobList"
            android:switchPadding="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/limitDates"
            android:textOff="No"
            android:textOn="Yes" />

        <TextView
            android:id="@+id/dateStartLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/jobLbl"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="190dp"
            android:text="@string/start"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/startDate"
            style="@style/InputBoxStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dateStartLbl"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="86dp"
            android:layout_marginLeft="86dp"
            android:inputType="date"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <EditText
            android:id="@+id/endDate"
            style="@style/InputBoxStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dateStartLbl"
            android:layout_alignTop="@id/startDate"
            android:layout_marginLeft="250dp"
            android:enabled="true"
            android:inputType="date"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/dateEndLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/jobLbl"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="190dp"
            android:text="@string/end"
            android:visibility="invisible" />

        <Button
            android:id="@+id/showHoursBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="294dp"
            android:text="SHOW HOURS" />

        <!-- Hour RecyclerView -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/hourList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startDate"
            android:layout_marginTop="64dp" />

</RelativeLayout>